--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -34,6 +34,6 @@ jobs:
           - DB_USER=dbuser
           - DB_PASS=password
 
-        run:
+        run: |
           python /temp/manage.py test
 
