--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,7 +20,8 @@ jobs:
         hostname: redis
 
     steps:
-      - users: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
 
       - name: Install Dependencies
         run: |
