--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,38 +1,37 @@
-name: Unit tests
-on: [pull_request, workflow_call]
+name: Django CI
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  check-unit-tests:
-    name: Check unit tests
+  build:
+
     runs-on: ubuntu-latest
-    container: python:3.11-alpine3.16
-
-    services:
-      database:
-        image: postgres:14.6-alpine
-        env:
-          - POSTGRES_DB=dbname
-          - POSTGRES_USER=dbuser
-          - POSTGRES_PASSWORD=password
-
-      redis:
-        image: redis:7.0.5-alpine
-        hostname: redis
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.7, 3.8, 3.9, 3.11]
 
     steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run Tests
+      env:
+        - DB_HOST=database
+        - DB_NAME=dbname
+        - DB_USER=dbuser
+        - DB_PASS=password
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r /temp/requirements.txt
-
-      - name: Run Test's
-        env:
-          - DB_HOST=database
-          - DB_NAME=dbname
-          - DB_USER=dbuser
-          - DB_PASS=password
-
-        run: |
-          python /temp/manage.py test
+      run: |
+        python /temp/manage.py test
 
