--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,62 +2,61 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.8, 3.9, 3.11]
 
     services:
-      web-app:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: dbuser
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: dbname
         ports:
-          - "8000:8000"
-        volumes:
-          - ./two_personal_area:/two_personal_area
-        env:
-          - DB_HOST=database
-          - DB_NAME=dbname
-          - DB_USER=dbuser
-          - DB_PASS=password
-        depends_on:
-          - database
-
-
-      database:
-        image: postgres:14.6-alpine
-        env:
-          - POSTGRES_DB=dbname
-          - POSTGRES_USER=dbuser
-          - POSTGRES_PASSWORD=password
-
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
       redis:
-        image: redis:7.0.5-alpine
+        image: redis:6
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      DATABASE_URL: postgres://postgres:postgres@localhost:5432/mydatabase
+      REDIS_URL: redis://localhost:6379
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
+        python-version: '3.11'
+
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
-      env:
-        - DB_HOST=database
-        - DB_NAME=dbname
-        - DB_USER=dbuser
-        - DB_PASS=password
 
-      run: |
-        python /temp/manage.py test
+    - name: Run migrations
+      run: python manage.py migrate
 
+    - name: Run tests
+      run: python manage.py test
