--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -42,21 +42,27 @@ jobs:
       REDIS_URL: redis://localhost:6379
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Build Docker image
+        run: docker build . --tag django-app:latest
 
-    - name: Run migrations
-      run: python manage.py migrate
+      - name: Run Docker container
+        run: docker run -d -p 8000:8000 --name django-app django-app:latest
 
-    - name: Run tests
-      run: python manage.py test
+      - name: Wait for DB to be ready
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for database..."
+            sleep 3
+          done
+
+      - name: Run migrations
+        run: docker exec django-app python manage.py migrate
+
+      - name: Run tests
+        run: docker exec django-app python manage.py test
