--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,7 +25,7 @@ jobs:
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 5
+          --health-retries 10
 
       redis:
         image: redis:6
@@ -56,7 +56,8 @@ jobs:
 
       - name: Wait for DB to be ready
         run: |
-          until pg_isready -h localhost -p 5432; do
+          echo "Waiting for PostgreSQL to be ready..."
+          until docker exec django-app pg_isready -h localhost -p 5432; do
             echo "Waiting for database..."
             sleep 3
           done
