--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,58 +12,33 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_USER: dbuser
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: dbname
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 10
-
-      redis:
-        image: redis:6
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    env:
-      DATABASE_URL: postgres://postgres:postgres@localhost:5432/mydatabase
-      REDIS_URL: redis://localhost:6379
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
-        run: docker build . --tag django-app:latest
+    - name: Set up Docker Compose
+      run: sudo apt-get install docker-compose -y
 
-      - name: Run Docker container
-        run: docker run -d -p 8000:8000 --name django-app django-app:latest
+    - name: Build and start containers
+      run: docker-compose up --build -d
 
-      - name: Wait for DB to be ready
-        run: |
-          echo "Waiting for PostgreSQL to be ready..."
-          until docker exec django-app pg_isready -h localhost -p 5432; do
-            echo "Waiting for database..."
-            sleep 3
-          done
+    - name: Wait for database to be ready
+      run: |
+        echo "Waiting for PostgreSQL to be ready..."
+        until docker-compose exec database pg_isready -h localhost -p 5432; do
+          echo "Waiting for database..."
+          sleep 3
+        done
 
-      - name: Run migrations
-        run: docker exec django-app python manage.py migrate
+    - name: Run migrations
+      run: docker-compose exec web-app python manage.py migrate
 
-      - name: Run tests
-        run: docker exec django-app python manage.py test
+    - name: Run tests
+      run: docker-compose exec web-app python manage.py test
+
+    - name: Stop and remove containers
+      if: always()
+      run: docker-compose down
