--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Wait for database to be ready
       run: |
         echo "Waiting for PostgreSQL to be ready..."
-        until docker-compose exec database pg_isready -h localhost -p 5432; do
+        until docker-compose exec database pg_isready -h database -p 5432; do
           echo "Waiting for database..."
           sleep 3
         done
