--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,19 +25,19 @@ jobs:
     - name: Build and start containers
       run: docker-compose up --build -d
 
-#    - name: Wait for database to be ready
-#      run: |
-#        echo "Waiting for PostgreSQL to be ready..."
-#        until docker-compose exec database pg_isready -h database -p 5432; do
-#          echo "Waiting for database..."
-#          sleep 3
-#        done
+    - name: Wait for database to be ready
+      run: |
+        echo "Waiting for PostgreSQL to be ready..."
+        until docker-compose exec -T database pg_isready -h database -p 5432; do
+          echo "Waiting for database..."
+          sleep 3
+        done
 
     - name: Run migrations
-      run: docker-compose exec web-app python manage.py migrate
+      run: docker-compose exec -T web-app python manage.py migrate
 
     - name: Run tests
-      run: docker-compose exec web-app python manage.py test
+      run: docker-compose exec -T web-app python manage.py test
 
     - name: Stop and remove containers
       if: always()
