--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,11 +23,10 @@ jobs:
       run: sudo apt-get install docker-compose -y
 
     - name: Build and start containers
-      run: docker-compose up --build -d
+      run: docker-compose up
 
     - name: Wait for database to be ready
       run: |
-        echo "Waiting for PostgreSQL to be ready..."
         until docker-compose exec -T database pg_isready -h database -p 5432; do
           echo "Waiting for database..."
           sleep 3
